# wallify

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Wallify-Setup.iss  Wallify.rc  build.ps1  converter.cs  gitignore  install_deps.ps1  wallify.slnx  wallify.vcxproj
resources/qml/: BottomPlayerBar.qml  LibraryView.qml  Main.qml  MainInterface.qml  MigrationView.qml  OnboardingView.qml  SettingsView.qml  Sidebar.qml  WelcomeScreen.qml  WindowControlButton.qml
src/: AppSettings.cpp  AppSettings.h  AudioPlayer.cpp  AudioPlayer.h  CoverImageProvider.h  DiscordRPC.cpp  DiscordRPC.h  LocalLibrary.cpp  LocalLibrary.h  SoundCloudMigrator.cpp  SoundCloudMigrator.h  SpotifyMigrator.cpp  SpotifyMigrator.h  YouTubeMigrator.cpp  YouTubeMigrator.h  main.cpp
